--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,8 +49,7 @@ a{
   justify-content:space-around;
 }
 .fondoindex>div{
-    flex: 50%;
-    margin: 10px 25px;
+    margin: 10px;
 }
 img{
     max-width: 100%;
@@ -148,7 +147,7 @@ p,h2,h3{
 @media (max-width:815px){
     .fondoindex{
         flex-direction: column;
-        margin: 20px;
+        margin: 10px;
     }
     #acercade{
         width: 70%;
@@ -170,6 +169,9 @@ p,h2,h3{
     #ingreso{
         margin: 10px 20%;
     }
+    .f175{
+        width: 60%;
+    }
 }
 
 @media(max-width:415px){
@@ -185,6 +187,16 @@ p,h2,h3{
         margin: 10px 15%;
     }
     .imagen{
-        height: 300px;
+        height: 250px;
+    }
+    h2,p{
+        text-align: center;
+    }
+    .f175{
+        width: 70%;
+    }
+    .piloto{
+        width: 90%;
+        height: 250px;
     }
 }
