--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,7 +63,7 @@ img{
     transition: .5s ease;
     backface-visibility: hidden;
 }
-.middle{
+.medio{
     transition: .5s ease;
     opacity: 0;
     position: absolute;
@@ -75,7 +75,7 @@ img{
 .container:hover .imagen{
     opacity: 0.5;
 }
-.container:hover .middle{
+.container:hover .medio{
     opacity: 1;
 }
 .texto{
