--- a/css/estilos.css
+++ b/css/estilos.css
@@ -79,7 +79,7 @@ img{
     opacity: 1;
 }
 .texto{
-    background-color: aliceblue;
+    background-color:rgb(245, 220, 1);
     font-size: 24px;
     padding: 15px 30px;
     border-radius: 5px;
